--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -5,6 +5,6 @@
     # acme_ca https://acme-staging-v02.api.letsencrypt.org/directory
 }
 
-smallhetzi.fading-flame.com {
+fading-flame.com {
     reverse_proxy portainer:1000
 }
