--- a/caddy/docker-compose.yml
+++ b/caddy/docker-compose.yml
@@ -3,6 +3,7 @@ version: "2"
 services:
   caddy:
     image: caddy:2-alpine
+    container_name: caddy
     restart: always
     ports:
       - "80:80"
