--- a/caddy/docker-compose.yml
+++ b/caddy/docker-compose.yml
@@ -14,8 +14,22 @@ services:
     networks:
       - web
 
+  portainer:
+    image: portainer/portainer-ce
+    container_name: portainer
+    restart: always
+    ports:
+      - "1000:80"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data portainer/portainer
+    entrypoint: /portainer -p :80
+    networks:
+      - web
+
 volumes:
   certs-volume:
+  portainer_data:
 
 networks:
   web:
