--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,18 +1,8 @@
 {
-    # Global options block. Entirely optional, https is on by default
-    # Optional email key for lets encrypt
     email simonheiss87@gmail.com
-    # acme_ca https://acme-staging-v02.api.letsencrypt.org/directory
+    acme_ca https://acme-staging-v02.api.letsencrypt.org/directory
 }
 
 fading-flame.com {
-    reverse_proxy portainer:1000
-}
-
-www.fading-flame.com {
-    reverse_proxy portainer:1000
-}
-
-smallhetzi.fading-flame.com {
     reverse_proxy portainer:1000
 }
