--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,8 +1,17 @@
 {
     email simonheiss87@gmail.com
-    # acme_ca https://acme-staging-v02.api.letsencrypt.org/directory
+    acme_ca https://acme-staging-v02.api.letsencrypt.org/directory
+    auto_https disable_redirects
+}
+
+smallhetzi.fading-flame.com {
+    reverse_proxy portainer:1000
 }
 
 fading-flame.com {
-    reverse_proxy portainer:1000
+    reverse_proxy test-fading-flame:1100
+}
+
+test.fading-flame.com {
+    reverse_proxy test-fading-flame:1101
 }
