--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,7 +1,6 @@
 {
     email simonheiss87@gmail.com
-    acme_ca https://acme-staging-v02.api.letsencrypt.org/directory
-    auto_https disable_redirects
+    # acme_ca https://acme-staging-v02.api.letsencrypt.org/directory
 }
 
 smallhetzi.fading-flame.com {
