--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -8,8 +8,6 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data portainer/portainer
     entrypoint: /portainer -p :80
-    networks:
-      - web
     ports:
       - "1000:80"
 
@@ -17,5 +15,6 @@ volumes:
   portainer_data:
 
 networks:
-  web:
-    external: true
+  default:
+    external:
+      name: caddy
