--- a/caddy/docker-compose.yml
+++ b/caddy/docker-compose.yml
@@ -4,19 +4,20 @@ services:
   caddy:
     image: caddy:2-alpine
     container_name: caddy
-    restart: always
+    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - certs-volume:/data
-    networks:
-      - web
+      - caddy_config:/config
 
 volumes:
   certs-volume:
+  caddy_config:
 
 networks:
-  web:
-    external: true
+  default:
+    external:
+      name: caddy
