--- a/caddy/docker-compose.yml
+++ b/caddy/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "443:443"
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
+      - ./site:/srv
       - certs-volume:/data
       - caddy_config:/config
 
