--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -23,6 +23,10 @@ test.identity.fading-flame.com {
     reverse_proxy http://identity-server-dev
 }
 
+modmoto.dev {
+    reverse_proxy http://portainer
+}
+
 www.modmoto.dev {
     reverse_proxy http://portainer
 }
